# learn_big_data_on_aws-project

./: .coveragerc  .gitignore  LICENSE.txt  MANIFEST.in  README.rst  build_fts_anything_dataset.py  chore.txt  count_code.py  doc_authoring_guide.rst  install.py  poetry-lock-hash.json  pygitrepo-config.json  pyproject.toml  pyproject_ops.json  release-history.rst  requirements-automation.txt  requirements-dev.txt  requirements-doc.txt  requirements-ground-truth.txt  requirements-test.txt  requirements.txt  setup.py
01-pyarrow-examples/: README.md
01-pyarrow-examples/01-Data-Types-and-In-Memory-Data-Model/: Data-Types-and-in-Memory-Data-Model.ipynb
01-pyarrow-examples/02-Timestamp/: timestamp.ipynb
01-pyarrow-examples/03-Compute-Functions/: compute-functions.ipynb
01-pyarrow-examples/04-numpy-Integration/: numpy-Integration.ipynb
01-pyarrow-examples/06-Data-Wrangling/: data-wrangling.ipynb
01-pyarrow-examples/91-parquet-Format/: 01-parquet-basic.ipynb  02-parquet-row-group.ipynb
02-pyspark-examples/: .gitignore  README.rst
02-pyspark-examples/01-Getting-Start/: README.rst
02-pyspark-examples/02-User-Guide/: README.rst
02-pyspark-examples/03-API-Reference/: README.rst
02-pyspark-examples/03-API-Reference/01-Spark-SQL/06-Column-APIs/: column_api.ipynb
02-pyspark-examples/04-Data-Wrangling/: common-operation.ipynb
03-glue-job-examples/01-read-data-examples/: dataset.ipynb  ds002.html
03-glue-job-examples/02-write-data-examples/: README.rst
03-glue-job-examples/03-transformation-examples/: dev.ipynb
03-glue-job-examples/03-transformation-examples/05-flatten-and-unnest-json/: dataset.ipynb  etl.ipynb
03-glue-job-examples/04-glue-job-best-practices/data-validation/: dataset.ipynb  requirements.txt  validate.ipynb
03-glue-job-examples/04-glue-job-best-practices/status-tracking/: dataset.ipynb  requirements.txt  run-etl-with-status-tracking.ipynb
03-glue-job-examples/missing-fields-and-null-values/: README.rst  etl.ipynb
03-glue-job-examples/transform-flatten-array/: dataset.ipynb  ds003.ipynb
docs/: Makefile  make.bat
docs/source/: conf.py  index.rst
docs/source/02-Best-Practices/Explore-the-Read-Parquet-Best-Practice-Using-Polars/: index.rst  (+2 more)
docs/source/03-DuckDB/: index.rst
glue-etl-examples/read-data-examples/: ds001.html  ds001.ipynb  ds003.ipynb
glue-job-examples/01-read-data-examples/: .gitignore  parquet-io.ipynb  pyarrow-tutorial.ipynb
glue-job-examples/missing-fields-and-null-values/: dataset.ipynb
glue-job-examples/read-data-examples/: ds002.ipynb
glue-job-examples/transform-flatten-array/: etl.ipynb  requirements.txt
lambda_app/: app.py
lambda_app/.chalice/: config.json
learn_big_data_on_aws/: athena.py  boto_ses.py  config.py  paths.py  utils.py
learn_big_data_on_aws/dataset/: __init__.py  base.py  ds001.py  ds002.py  ds003.py  ds03.py  ds04.py
pyarrow-examples/05-pandas-Integration/: pandas-Integration.ipynb
pyarrow-examples/91-parquet-Format/: 01-parquet-basic.ipynb
pyarrow-examples/91-parquet-basic/: parquet-basic.ipynb
pyarrow-examples/numpy-Integration/: numpy-Integration.ipynb
pyarrow-examples/pandas-Integration/: pandas-Integration.ipynb
scripts/: create_all_dataset.py  create_one_dataset.py  get_table.py  run_jupyter_lab_glue_container.py
tests/: test_import.py
tutorials/PySpark-tutorial/: README.rst
(+12 files in other folders)
